--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -4,6 +4,11 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true"
 				creationComplete="creationCompleteHandler(event)">
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="selected" />
+	</s:states>
+	
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -17,12 +22,23 @@
 			
 		]]>
 	</fx:Script>
+	<s:Rect id="fill"
+			bottom="0" left="0" right="0" top="0">
+		<s:fill>
+			<s:LinearGradient rotation="90">
+				<s:GradientEntry color.normal="#424242" color.selected="#FFFFFF" />
+				<s:GradientEntry color.normal="#191919" color.selected="#C6C6C6" />
+			</s:LinearGradient>
+		</s:fill>
+		
+	</s:Rect>
 	
 	<s:HGroup width="100%" height="100%" verticalAlign="middle">
 		<mx:Image id="imageHolder"
 				  width="50" height="50"/>
 		
-		<s:Label id="nameLabel"/>
+		<s:Label id="nameLabel" 
+				 fontSize="15" color.normal="#FFFFFF" color.selected="#000000"/>
 	</s:HGroup>
 	
 	
