--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
@@ -4,7 +4,8 @@
 		xmlns:mx="library://ns.adobe.com/flex/mx"
 		xmlns:component="net.vdombox.ide.core.view.components"
 		
-		width="550" height="340" minWidth="550" minHeight="340" xmlns:components="net.vdombox.ide.core.view.components.*">
+		width="550" height="340" minWidth="550" minHeight="340" xmlns:components="net.vdombox.ide.core.view.components.*"
+		contentBackgroundAlpha="0">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.ApplicationManagerWindow")]
@@ -37,8 +38,14 @@
 		</s:fill>
 	</s:Rect>
 	
+	<s:Rect left="9" top="9" right="9" bottom="9">
+		<s:fill>
+			<s:SolidColor color="#333333"/>
+		</s:fill>
+	</s:Rect>
+	
 	<s:VGroup left="9" top="9" right="9" bottom="9" gap="0">
-		
+
 		<s:Group width="100%" height="42">
 			<s:TitleBar id="titleBar"
 						width="100%" height="100%"
