--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
@@ -11,6 +11,13 @@
 				// TODO Auto-generated method stub
 				dispatchEvent( new ApplicationManagerWindowEvent( ApplicationManagerWindowEvent.OPEN_IN_EDITOR ) );
 			}
+			
+			protected function applicationEditor_clickHandler(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				dispatchEvent( new ApplicationManagerWindowEvent( ApplicationManagerWindowEvent.OPEN_IN_EDIT_VIEW ) );
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -32,11 +39,12 @@
 			  paddingTop="12" paddingBottom="30" gap="10">
 		<s:Label id="applicationName" 
 				 fontSize="20" color="#FFFFFF"/>
-		<s:Label id="applicationDescription"/>
+		<s:Label id="applicationDescription"
+				 color="#FFFFFF"/>
 		
 		<s:Label id="applicationEditor" 
 				 text="Change application settings" textDecoration="underline"
-				 fontSize="12" color="#25D9FF"/>
+				 fontSize="12" color="#25D9FF" click="applicationEditor_clickHandler(event)"/>
 		<mx:Spacer height="100%"/>
 		
 		<s:HGroup height="25" width="100%" horizontalAlign="center" gap="20">
