--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationManagerWindowSkin.mxml
@@ -59,7 +59,12 @@
 			
 		</s:Group>	
 		
-		<components:ChangeApplicationView id="changeApplicationView" width="100%" height="100%"/>
+		<s:Group width="100%" height="100%" >
+			<components:ChangeApplicationView id="changeApplicationView" width="100%" height="100%" 
+											  visible="true" />
+			<components:CreateEditApplicationView id="createEditApplicationView" width="100%" height="100%" 
+												  visible="false" />
+		</s:Group>
 		
 	</s:VGroup>
 	
