Add ApplicationManagerWindow. Step 6. delete ApplicationManagerModule
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7168 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -14,10 +14,20 @@
 			import mx.events.FlexEvent;
 			
 			public static const RENDERER_CREATED : String = "rendererCreated";
+			public static const RENDERER_CHANGE : String = "rendererCreated";
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
 				dispatchEvent( new Event( RENDERER_CREATED ) );
+			}
+			
+			override public function set data( value : Object ) : void
+			{
+				if ( super.data != value )
+				{
+					super.data = value;
+					dispatchEvent( new Event( RENDERER_CHANGE ) );
+				}
 			}
 			
 		]]>
