--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -2,7 +2,8 @@
 <mx:HTML xmlns:mx="http://www.adobe.com/2006/mxml" 
 	location="libs/ckeditor/_samples/fullpage.html"
 	creationComplete="init()" width="100%" height="100%"
-	htmlDOMInitialize="html1_htmlDOMInitializeHandler(event)">
+	uncaughtScriptException="onJavaScriptException(event)"
+	complete="htmlCompleteHandler(event)">
 	<mx:Script>
 		<![CDATA[
 			import com.adobe.images.PNGEncoder;
@@ -10,6 +11,8 @@
 			import mx.utils.Base64Encoder;
 			
 			private var instancesInitialized 	: Boolean;
+			private var pageContentToRefresh	: String;
+			private var refreshPageAfterInit	: Boolean;
 			
 			public static const MAX_IMAGE_WIDTH : Number = 500;
 			
@@ -36,6 +39,7 @@
 
 			private function init():void
 			{
+				trace ("init");
 				this.addEventListener(KeyboardEvent.KEY_UP,		onKeyboardKeyUp);
 				this.addEventListener(KeyboardEvent.KEY_DOWN,	onKeyboardKeyDown);
 			}
@@ -69,6 +73,8 @@
 			public function setHTML( value : String ) : void
 			{
 				if (!instancesInitialized) {
+					refreshPageAfterInit = true;
+					pageContentToRefresh = value;
 					return;
 				}
 				domWindow.CKEDITOR.instances.editor1.setData(value);
@@ -177,11 +183,6 @@
 				}
 				
 				return xml.toXMLString();
-			}
-			
-			protected function html1_htmlDOMInitializeHandler(event:Event):void
-			{
-				instancesInitialized = true;
 			}
 			
 			public static function getNewPageContent(aPageTitle:String) : String
@@ -500,6 +501,30 @@
 				
 				return sizeNumber;
 			}
+			
+			protected function onJavaScriptException(event:HTMLUncaughtScriptExceptionEvent):void
+			{
+				trace ("JavaScriptException");
+			}
+			
+			protected function htmlCompleteHandler(event:Event):void
+			{
+				instancesInitialized = true;
+				
+				if (refreshPageAfterInit) {
+					setHTML(pageContentToRefresh);
+					
+					pageContentToRefresh = null;
+					refreshPageAfterInit = false;
+				}
+			}
+			
+			public function preventRefresh():void
+			{
+				refreshPageAfterInit = false;
+				pageContentToRefresh = null;
+			}
+			
 		]]>
 	</mx:Script>
 </mx:HTML>
