git-svn-id: http://svn.vdombox.ru/flextools/trunk@7171 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -514,8 +514,7 @@
 				if (refreshPageAfterInit) {
 					setHTML(pageContentToRefresh);
 					
-					pageContentToRefresh = null;
-					refreshPageAfterInit = false;
+					preventRefresh();
 				}
 			}
 			
