--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/LoginButtonSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/LoginButtonSkin.mxml
@@ -38,7 +38,7 @@
 			
 			private function creationCompleteHandler() : void
 			{
-				BindingUtils.bindSetter( iconChanged, hostComponent, "icon" );
+				BindingUtils.bindSetter( iconChanged, hostComponent, "icon", false, true  );
 			}
 			
 			private function iconChanged( value : Object ) : void
