Add ApplicationManagerWindow. Step 6. last modification
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7178 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ChangeApplicationView.mxml
@@ -55,8 +55,7 @@
 				 fontSize="12" color="#25D9FF" click="applicationEditor_clickHandler(event)"/>
 		<mx:Spacer height="100%"/>
 		
-		<s:HGroup height="25" width="100%" horizontalAlign="center" gap="20">
-			<s:Button />
+		<s:HGroup height="25" width="100%" horizontalAlign="right" gap="20" paddingRight="20">
 			
 			<s:Button id="btnOpenInEditor" 
 					  width="100" height="100%"
