--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -1,4 +1,7 @@
-<s:SparkSkin xmlns:components="net.vdombox.ide.core.view.components.*" xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:s="library://ns.adobe.com/flex/spark"
+<s:SparkSkin xmlns:components="net.vdombox.ide.core.view.components.*" 
+			 xmlns:fx="http://ns.adobe.com/mxml/2009" 
+			 xmlns:mx="library://ns.adobe.com/flex/mx" 
+			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 
 			 height="600" width="800">
 
@@ -109,17 +112,44 @@
 				
 				<mx:Spacer width="100%" />
 				
-				<s:Button id="applicationManagerButton"
-						  label="App Manager"
-						  height="100%"
-						  click="dispatchEvent( new MainWindowEvent( MainWindowEvent.SHOW_APP_MANAGER ) )"/>
-				
-				<components:LoginButton id="loginButton"
-										height="100%"
-										icon="@Embed('../assets/main/logout.png')"
-										label="{ resourceManager.getString( 'Core_General', 'login_button_label' ) + ' ' + hostComponent.username.toUpperCase() }"
-										color="#292A2E"
-										skinClass="net.vdombox.ide.core.view.skins.LoginButtonSkin" />
+				<s:VGroup width="250" height="100%" verticalAlign="middle">
+					<s:Group width="100%" height="60%" >
+						
+						<s:Rect width="100%" height="100%">
+							<s:fill>
+								<s:SolidColor color="#424242" />
+							</s:fill>
+						</s:Rect>
+						
+						<s:Group left="1" top="1" right="1" bottom="1">
+							
+							<s:Rect width="100%" height="100%">
+								<s:fill>
+									<s:LinearGradient rotation="90">
+										<s:GradientEntry color="#3F3F3F" />
+										<s:GradientEntry color="#191919" />
+									</s:LinearGradient>
+								</s:fill>
+							</s:Rect>
+							
+							<s:HGroup width="100%" height="100%" verticalAlign="middle" paddingLeft="10" gap="10">
+								<mx:Image id="iconApplication" width="{iconApplication.height}" height="60%"/>
+								
+								<s:VGroup width="100%" height="60%">
+									<s:Label id="nameApplication" color="#FFFFFF" />
+									
+									<s:Label id="applicationManagerLabel" 
+											 color="#25D9FF" textDecoration="underline" text="Open App Manager"
+											 click="dispatchEvent( new MainWindowEvent( MainWindowEvent.SHOW_APP_MANAGER ) )"/>
+								</s:VGroup>
+								
+							</s:HGroup>
+						</s:Group>
+
+					</s:Group>
+				</s:VGroup>
+
+				<mx:Spacer width="12" />
 			</s:Group>
 		</s:Group>
 		
