Add ApplicationManagerWindow. Step 7. Relise version
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7181 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -3,6 +3,8 @@
 				xmlns:s="library://ns.adobe.com/flex/spark" 
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true"
+				doubleClickEnabled="true"
+				doubleClick="doubleClickHandle(event)"
 				creationComplete="creationCompleteHandler(event)">
 	<s:states>
 		<s:State name="normal" />
@@ -15,6 +17,12 @@
 			
 			public static const RENDERER_CREATED : String = "rendererCreated";
 			public static const RENDERER_CHANGE : String = "rendererCreated";
+			public static const RENDERER_DOUBLE_CLICKED : String = "rendererDoubleClicked";
+			
+			protected function doubleClickHandle(event:MouseEvent) : void
+			{
+				dispatchEvent( new Event( RENDERER_DOUBLE_CLICKED ) );
+			}
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
