--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/GalleryItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/GalleryItemRenderer.mxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 				xmlns:s="library://ns.adobe.com/flex/spark"
-				xmlns:mx="library://ns.adobe.com/flex/mx">
+				xmlns:mx="library://ns.adobe.com/flex/mx"
+				doubleClickEnabled="true"
+				doubleClick="doubleClickHandle(event)">
 	
 	<fx:Script>
 		<![CDATA[
+			
+			public static const RENDERER_DOUBLE_CLICKED : String = "rendererDoubleClicked";
+			
 			public override function set data( value : Object ) : void
 			{
 				itemImage.source = value && value.content ? value.content : null;
+			}
+			
+			protected function doubleClickHandle(event:MouseEvent) : void
+			{
+				dispatchEvent( new Event( RENDERER_DOUBLE_CLICKED ) );
 			}
 		]]>
 	</fx:Script>
