--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/IconChooserWindowSkin.mxml
@@ -10,12 +10,21 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.core.view.components.GalleryItemRenderer;
+			
 			protected function iconsList_creationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
 				var d : * = "";
 				if ( iconsList.skin && iconsList.skin[ "background" ] )
 					iconsList.skin[ "background" ].alpha = 0;
+				
+				iconsList.addEventListener( GalleryItemRenderer.RENDERER_DOUBLE_CLICKED, doubleClickedFun, true, 0, true);
+			}
+			
+			private function doubleClickedFun( event : Event ) : void
+			{
+				hostComponent.closeHandler();
 			}
 			
 		]]>
