--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -112,7 +112,7 @@
 				
 				<mx:Spacer width="100%" />
 				
-				<s:VGroup width="250" height="100%" verticalAlign="middle">
+				<s:VGroup width="220" height="100%" verticalAlign="middle">
 					<s:Group width="100%" height="60%" >
 						
 						<s:Rect width="100%" height="100%">
@@ -136,7 +136,7 @@
 								<mx:Image id="iconApplication" width="{iconApplication.height}" height="60%"/>
 								
 								<s:VGroup width="100%" height="60%">
-									<s:Label id="nameApplication" color="#FFFFFF" />
+									<s:Label id="nameApplication" color="#FFFFFF" fontSize="14"/>
 									
 									<s:Label id="applicationManagerLabel" 
 											 color="#25D9FF" textDecoration="underline" text="Open App Manager"
